--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                 </div>
                 <div class="contact-map">
                     <div class="map-container">
-                        <img src="https://maps.googleapis.com/maps/api/staticmap?center=Healthcare+City,Dubai&zoom=15&size=600x300&maptype=roadmap&markers=color:red%7CHealthcare+City,Dubai&key=YOUR_API_KEY" alt="Clinic Location">
+                        <img src="assets//map.webp" alt="">
                         <div class="map-overlay">
                             <i class="fas fa-map-marker-alt"></i>
                             <span>Our Location</span>
