--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                 </div>
                 <div class="contact-map">
                     <div class="map-container">
-                        <img src="assets//map.webp" alt="">
+                        <img src="assets/map.webp" alt="">
                         <div class="map-overlay">
                             <i class="fas fa-map-marker-alt"></i>
                             <span>Our Location</span>
