--- a/index.html
+++ b/index.html
@@ -559,6 +559,13 @@
                 <div class="copyright">
                     &copy; 2023 Dr. Khalid Al-Mansoori. All Rights Reserved.
                 </div>
+                <div>
+                    <p>
+                        🌟 From Zair Web Studio, with 💕
+
+
+                    </p>
+                </div>
                 <div class="legal-links">
                     <a href="#">Privacy Policy</a>
                     <a href="#">HIPAA Compliance</a>
